@@ -66,7 +66,7 @@
                 <!-- Hamcrest -->
                 <exclude>org.hamcrest:hamcrest-core</exclude>
                 <exclude>org.hamcrest:hamcrest-library</exclude>
-                <exclude>org.hamcrest:hamcrest-library</exclude>
+                <exclude>org.hamcrest:hamcrest</exclude>
                 <!-- HTTP Client -->
                 <exclude>org.apache.httpcomponents:httpclient</exclude>
                 <exclude>org.apache.httpcomponents:httpmime</exclude>
